projeto-blog/Projeto-blog/back-end/liblog/src/main/java/com/example/liblog/error/exception/ReturnNullException.java
package com.example.liblog.error.exception;

import lombok.Data;


public class ReturnNullException extends RuntimeException {
    public ReturnNullException(String message) {
        super(message);
    }
}
